Sun Aug  5 20:26:03 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* file.pl.in (xst_file_run_pipe_write): The write version
	of run_pipe_read.
	(xst_file_run_pipe): And then some abstraction occurs.

Fri Aug  3 22:32:38 2001  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in (xml_parse_network): Call xst_network_xml_parse_interface,
	which used to be xml_parse_interface.

	* network.pl.in (xst_network_xml_parse_interface):
	Relocated so it can be shared with internetsharing.

2001-08-03  Arturo Espinosa Aldama  <arturo@ximian.com>

	* internetsharing-conf.in (xst_ishare_fwrules_get_ipchains): Get
	ipchains-related information.
	(xst_ishare_dhcp_mdk72_get): New. Used mdk72 because that's our base
	platform.
	(xst_ishare_get_linux22_support): Check for kernel support.
	(xst_ishare_get_linux22_support_active): Check if kernel support is active.
	Added mdk 7.2 as supported platform.

	* file.pl.in (xst_file_run_pipe_read): New utility to run commands
	that will be piped for reading.
	(xst_file_run): use xst_file_get_cmd_path now.
	(xst_file_get_cmd_path): Taken from xst_file_run to generate command.
	* *.in: Replaced a bunch of open "blah|" calls with xst_file_run_pipe_read.

2001-07-30  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_known_var): Deal only with selected list of keywords.
	(xst_boot_conf_edit_image): Rewrote it. It's now much safer since it doesn't
	touch anything else than really needed (value part).
	(xst_boot_conf_set_images): Match images based on key, not name and image location.
	(xst_boot_set_global): Improved quoting of values with spaces or with '='.

	* boot-conf.in (xml_parse_boot): Removed some unused keywords.

2001-07-28  Tambet Ingo  <tambet@ximian.com>

	* x.pl.in (x_update_display_mode): Chop off additional space.

	* boot.pl.in (xst_boot_conf_is_image): Try default label also.
	(xst_boot_conf_delete_image): Fixed bug of deletion of last image.
	(xst_boot_conf_edit_image): Quote values which have '=' mark.