@@ -42,7 +42,7 @@ require "___scriptsdir___/network.pl";
 
 $name = "internetsharing";
 $version = "___version___";
-@platforms = ("redhat-7.1", "redhat-7.0", "mandrake-7.2", "debian-2.2");
+@platforms = ("redhat-7.1", "redhat-7.0", "mandrake-7.2");
 
 $description =<<"end_of_description;";
        Sets up firewall rules for a basic internet sharing (masq)
@@ -97,9 +97,10 @@ sub xml_parse_internetsharing
 sub xml_parse_fwrules
 {
   my ($tree) = @_;
-  my ($elem, $hash);
+  my ($elem, $hash, $landevs);
 
   $hash = {};
+  $landevs = [];
   shift @$tree;  # Skip attributes.
 
   while ($elem = shift @$tree)
@@ -109,8 +110,11 @@ sub xml_parse_fwrules
       elsif ($elem eq "forwarding")   { $$hash{"forwarding"}   = &xst_xml_get_pcdata (shift @$tree); }
       elsif ($elem eq "masquerading") { $$hash{"masquerading"} = &xst_xml_get_pcdata (shift @$tree); }
       elsif ($elem eq "active")       { $$hash{"active"}       = &xst_xml_get_pcdata (shift @$tree); }
+      elsif ($elem eq "landev")       { push @$landevs, &xst_xml_get_pcdata (shift @$tree); }
       else  { &xst_report ("xml_unexp_tag", $elem); shift @$tree; }
   }
+
+  $hash{"landev"} = $landevs;
 
   return $hash;
 }
@@ -188,7 +192,7 @@ sub xst_ishare_fwrules_get_ipchains
 
 sub xst_ishare_fwrules_set_ipchains
 {
-  my ($ipchains_conf, $values_hash) = @_;
+  my ($ipchains_conf, $interface, $values_hash) = @_;
   my ($fd, $val);
 
   
@@ -306,7 +310,6 @@ sub conf_get_parse_table
    "redhat-7.0"   => "mandrake-7.2",
    "redhat-7.1"   => "mandrake-7.2",
    "mandrake-7.2" => "mandrake-7.2",
-   "debian-2.2"   => "mandrake-7.2"
    );
 
   my %dist_tables =
@@ -341,7 +344,6 @@ sub conf_get_replace_table
    "redhat-7.0"   => "mandrake-7.2",
    "redhat-7.1"   => "mandrake-7.2",
    "mandrake-7.2" => "mandrake-7.2",
-   "debian-2.2"   => "mandrake-7.2"
    );
 
   my %dist_tables =
@@ -356,8 +358,8 @@ sub conf_get_replace_table
          table =>
              [
               [ "interface", \&xst_network_interfaces_set,      OLD_HASH ],
-              [ "fwrules",   \&xst_ishare_fwrules_set_ipchains, IPCHAINS_CONF ],
-              [ "dhcp",      \&xst_ishare_dhcp_isc_set,         DHCPD_CONF ],
+              [ "fwrules",   \&xst_ishare_fwrules_set_ipchains, IPCHAINS_CONF, "%interface%" ],
+              [ "dhcp",      \&xst_ishare_dhcp_isc_set,         DHCPD_CONF,    "%interface%" ],
               ]
                 },
        );
