@@ -1,3 +1,11 @@
+2001-08-06  Arturo Espinosa Aldama  <arturo@ximian.com>
+
+	* file.pl.in (xst_file_get_base_path): Store setup and
+	backups in /var/cache/setup-tool-backends.
+	* files/Makefile.am, files/ChangeLog: created directory
+	where files to be installed at run-time will reside.
+	* configure.in: Generate files/Makefile.
+
 Sun Aug  5 20:26:03 2001  Arturo Espinosa Aldama  <arturo@ximian.com>
 
 	* file.pl.in (xst_file_run_pipe_write): The write version
